--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
   "homepage": "https://github.com/chay-a/AplsDrive#readme",
   "dependencies": {
     "express": "^4.17.3"
-  }
+  },
+  "type": "module"
 }
