--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   },
   "type": "module",
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.2.2",
+    "@types/node": "^17.0.26",
+    "nodemon": "^2.0.15",
+    "typescript": "^4.6.3"
   }
 }
