--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "alpsdrive",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon main.js",
-    "debug": "node --inspect main.js"
+    "debug": "node --inspect main.ts"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "@types/express-fileupload": "^1.2.2",
     "@types/node": "^17.0.26",
     "nodemon": "^2.0.15",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   }
 }
